--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -20,9 +20,9 @@
 			"max": 300
 		},
 		"labelRead": {
-			"type": "text",
-			"label": "Select the objects to be read from server:",
-			"newLine": true
+			"type": "header",
+			"text": "Select the objects to be read from server:",
+			"size": 3
 		},
 		"readSections": {
 			"type": "checkbox",
