Update package.json with new keywords

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://github.com/DEV2DEV-DE/ioBroker.jablotron",
   "license": "MIT",
   "keywords": [
-    "jablotron alarm security"
+    "ioBroker jablotron alarm security"
   ],
   "repository": {
     "type": "git",
