--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "homepage": "https://github.com/DEV2DEV-DE/ioBroker.jablotron",
   "license": "MIT",
   "keywords": [
-    "ioBroker", "jablotron", "alarm", "security"
+    "ioBroker",
+    "jablotron",
+    "alarm",
+    "security"
   ],
   "repository": {
     "type": "git",
@@ -28,6 +31,7 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.3.0",
+    "@iobroker/eslint-config": "^1.0.0",
     "@iobroker/testing": "^4.1.3",
     "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.11",
@@ -39,7 +43,6 @@
     "@types/sinon-chai": "^3.2.12",
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.57.0",
     "mocha": "^10.8.2",
     "proxyquire": "^2.1.3",
     "sinon": "^19.0.2",
@@ -62,7 +65,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
     "check": "tsc --noEmit -p tsconfig.check.json",
-    "lint": "eslint .",
+    "lint": "eslint -c eslint.config.mjs .",
     "translate": "translate-adapter",
     "release": "release-script"
   },
