--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "chai-as-promised": "^8.0.2",
     "mocha": "^10.8.2",
     "proxyquire": "^2.1.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
     "sinon": "^21.0.1",
     "sinon-chai": "^4.0.1",
   },
