--- a/package.json
+++ b/package.json
@@ -28,13 +28,10 @@
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
     "@alcalzone/release-script-plugin-iobroker": "^4.0.0",
-    "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@iobroker/adapter-dev": "^1.4.0",
-    "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
-    "@iobroker/eslint-config": "^2.0.2",
     "@alcalzone/release-script-plugin-license": "^4.0.0",
-    "@iobroker/eslint-config": "^2.2.0",
+    "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
     "@iobroker/adapter-dev": "^1.5.0",
+    "@iobroker/eslint-config": "^2.2.0",
     "@tsconfig/node18": "^18.2.6",
     "@iobroker/testing": "^5.2.2",
     "@types/chai": "^4.3.11",
@@ -50,7 +47,7 @@
     "proxyquire": "^2.1.3",
     "typescript": "~5.8.3",
     "sinon": "^21.0.1",
-    "sinon-chai": "^4.0.1",
+    "sinon-chai": "^4.0.1"
   },
   "main": "main.js",
   "files": [
