--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.jablotron",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Connects to the Jablotron cloud to access your security system",
   "author": {
     "name": "DEV2DEV-DE",
@@ -32,22 +32,12 @@
     "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
     "@iobroker/adapter-dev": "^1.5.0",
     "@iobroker/eslint-config": "^2.2.0",
+    "@iobroker/testing": "^5.1.1",
     "@tsconfig/node18": "^18.2.6",
-    "@iobroker/testing": "^5.2.2",
-    "@types/chai": "^4.3.11",
-    "@types/chai-as-promised": "^8.0.2",
-    "@types/mocha": "^10.0.10",
     "@types/node": "^25.0.3",
     "@types/proxyquire": "^1.3.31",
-    "@types/sinon": "^21.0.0",
-    "@types/sinon-chai": "^4.0.0",
-    "chai": "^4.4.1",
-    "chai-as-promised": "^8.0.2",
-    "mocha": "^10.8.2",
     "proxyquire": "^2.1.3",
-    "typescript": "~5.8.3",
-    "sinon": "^21.0.1",
-    "sinon-chai": "^4.0.1"
+    "typescript": "~5.8.3"
   },
   "main": "main.js",
   "files": [
